feat: add macro functionality